[gd_scene load_steps=21 format=2]

[ext_resource path="res://19637514-happy-arabic-man-giving-thumb-up-on-white-background.webp" type="Texture" id=1]
[ext_resource path="res://ARIAL.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://ti.png" type="Texture" id=3]
[ext_resource path="res://allahWav.wav" type="AudioStream" id=4]
[ext_resource path="res://Main menu.gd" type="Script" id=5]
[ext_resource path="res://arabMan.png" type="Texture" id=6]
[ext_resource path="res://Camera2D.gd" type="Script" id=7]
[ext_resource path="res://selector.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 33
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 2 )

[sub_resource type="TileSet" id=4]
0/name = "ti.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 200, 200 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "ti.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 700, 25, 200, 200 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "ti.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 400, 0, 200, 200 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "ti.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 1000, 0, 200, 200 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "ti.png 4"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 1600, 0, 200, 200 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "ti.png 5"
5/texture = ExtResource( 3 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 1900, 25, 200, 200 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "ti.png 6"
6/texture = ExtResource( 3 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 2300, 25, 200, 200 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "ti.png 7"
7/texture = ExtResource( 3 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 1300, 25, 200, 200 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0

[sub_resource type="Theme" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.133333, 0.117647, 0.584314, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.6, 0.6, 0.6, 1 )
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=7]
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=8]

[sub_resource type="StyleBoxFlat" id=9]

[sub_resource type="DynamicFont" id=11]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=12]
default_font = SubResource( 11 )

[node name="Project" type="Node2D"]
script = ExtResource( 5 )

[node name="Main_menu" type="Sprite" parent="."]
visible = false
position = Vector2( 517, 300 )
scale = Vector2( 0.810769, 0.715935 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="Main_menu"]
margin_left = -410.721
margin_top = -328.242
margin_right = 274.279
margin_bottom = -249.242
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "saudi arabia simulator"

[node name="Exit" type="Button" parent="Main_menu"]
margin_left = 265.18
margin_top = 173.2
margin_right = 416.18
margin_bottom = 216.2
custom_fonts/font = SubResource( 2 )
text = "Exit"

[node name="Multiplayer" type="Button" parent="Main_menu"]
margin_left = 145.541
margin_top = -150.852
margin_right = 394.541
margin_bottom = -107.852
custom_fonts/font = SubResource( 2 )
text = "Play with people"

[node name="Credits" type="Button" parent="Main_menu"]
margin_left = 260.247
margin_top = 12.571
margin_right = 411.247
margin_bottom = 55.571
custom_fonts/font = SubResource( 2 )
text = "Credits"

[node name="Credits2" type="Label" parent="Main_menu"]
visible = false
margin_left = -563.662
margin_top = 9.7774
margin_right = -140.662
margin_bottom = 251.777
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Credits:
for first version poblin
for this me"

[node name="Multiplayer_window" type="Panel" parent="."]
visible = false
margin_left = 50.0
margin_top = 24.0
margin_right = 960.0
margin_bottom = 580.0

[node name="Exitm" type="Button" parent="Multiplayer_window"]
margin_left = 803.0
margin_top = 496.0
margin_right = 892.0
margin_bottom = 539.0
custom_fonts/font = SubResource( 2 )
text = "Exit"

[node name="Join" type="Button" parent="Multiplayer_window"]
margin_left = 349.0
margin_top = 154.0
margin_right = 438.0
margin_bottom = 197.0
custom_fonts/font = SubResource( 2 )
text = "Join"

[node name="Host" type="Button" parent="Multiplayer_window"]
margin_left = 76.0
margin_top = 154.0
margin_right = 165.0
margin_bottom = 197.0
custom_fonts/font = SubResource( 2 )
text = "Host"

[node name="servername" type="LineEdit" parent="Multiplayer_window"]
margin_left = 454.0
margin_top = 155.0
margin_right = 890.0
margin_bottom = 190.0
text = "localhost"

[node name="currentplayername" type="LineEdit" parent="Multiplayer_window"]
margin_left = 271.0
margin_top = 53.0
margin_right = 605.0
margin_bottom = 88.0

[node name="tagname" type="Label" parent="Multiplayer_window"]
margin_left = 158.0
margin_top = 59.0
margin_right = 270.0
margin_bottom = 104.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "My name is"

[node name="tagserverip" type="Label" parent="Multiplayer_window"]
margin_left = 456.0
margin_top = 127.0
margin_right = 879.0
margin_bottom = 369.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Server ip:"

[node name="serverportis" type="LineEdit" parent="Multiplayer_window"]
margin_left = 184.0
margin_top = 159.0
margin_right = 328.0
margin_bottom = 194.0
text = "6014"

[node name="maxplayers" type="LineEdit" parent="Multiplayer_window"]
visible = false
margin_left = 185.0
margin_top = 225.0
margin_right = 329.0
margin_bottom = 260.0
text = "8"

[node name="tagmaxplayers" type="Label" parent="Multiplayer_window"]
visible = false
margin_left = 70.0
margin_top = 229.0
margin_right = 182.0
margin_bottom = 274.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Max players"

[node name="tagport" type="Label" parent="Multiplayer_window"]
margin_left = 194.0
margin_top = 129.0
margin_right = 306.0
margin_bottom = 174.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Host/join port"

[node name="generatename" type="Button" parent="Multiplayer_window"]
margin_left = 619.0
margin_top = 56.0
margin_right = 666.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 10 )
text = "gen."

[node name="Game" type="Node2D" parent="."]
position = Vector2( 50, 24 )

[node name="TileMap" type="TileMap" parent="Game"]
tile_set = SubResource( 4 )
cell_size = Vector2( 200, 200 )
format = 1

[node name="item" type="Sprite" parent="Game/TileMap"]

[node name="players" type="Node" parent="Game"]

[node name="1" type="RigidBody2D" parent="Game/players"]
visible = false
position = Vector2( 50, 24 )
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="Game/players/1"]
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Game/players/1"]
polygon = PoolVector2Array( -14, 86, 47, 63, 38, -53, 7, -87, -45, -60, -12, -43 )

[node name="Camera2D" type="Camera2D" parent="Game/players/1"]
script = ExtResource( 7 )

[node name="nametag" type="Label" parent="Game/players/1"]
margin_left = -78.0
margin_top = -115.0
margin_right = 86.0
margin_bottom = -87.0
grow_horizontal = 2
theme = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "xxx_noskoper_xxx"
align = 1

[node name="allah" type="AudioStreamPlayer2D" parent="Game/players/1"]
stream = ExtResource( 4 )

[node name="items" type="Node" parent="Game"]

[node name="ui" type="CanvasLayer" parent="."]

[node name="stuff" type="Node2D" parent="ui"]

[node name="pray" type="ProgressBar" parent="ui/stuff"]
margin_left = 10.0
margin_top = 590.0
margin_right = 181.0
margin_bottom = 616.0
rect_rotation = -90.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
max_value = 700.0
value = 700.0
percent_visible = false

[node name="Credits2" type="Label" parent="ui/stuff/pray"]
anchor_right = 1.0
margin_left = 165.0
margin_top = 6.0
margin_right = 65.0
margin_bottom = 111.0
rect_rotation = 90.0
theme = SubResource( 5 )
custom_fonts/font = SubResource( 3 )
text = "P
R
A
Y"

[node name="hunger" type="ProgressBar" parent="ui/stuff"]
margin_left = 46.0
margin_top = 590.0
margin_right = 217.0
margin_bottom = 616.0
rect_rotation = -90.0
custom_styles/bg = SubResource( 8 )
max_value = 10000.0
value = 10000.0
percent_visible = false

[node name="Credits2" type="Label" parent="ui/stuff/hunger"]
anchor_right = 1.0
margin_left = 165.0
margin_top = 5.00003
margin_right = 65.0
margin_bottom = 164.0
rect_rotation = 90.0
theme = SubResource( 5 )
custom_fonts/font = SubResource( 3 )
text = "H
U
N
G
E
R"

[node name="water" type="ProgressBar" parent="ui/stuff"]
margin_left = 84.0
margin_top = 590.0
margin_right = 255.0
margin_bottom = 616.0
rect_rotation = -90.0
custom_styles/bg = SubResource( 9 )
max_value = 2000.0
value = 2000.0
percent_visible = false

[node name="Credits2" type="Label" parent="ui/stuff/water"]
anchor_right = 1.0
margin_left = 169.0
margin_top = 4.0
margin_right = 19.0
margin_bottom = 136.0
rect_rotation = 90.0
theme = SubResource( 5 )
custom_fonts/font = SubResource( 3 )
text = "W
A
T
E
R"

[node name="inventory" type="Panel" parent="ui"]
visible = false
margin_left = 116.0
margin_top = 49.0
margin_right = 816.0
margin_bottom = 418.0

[node name="GridContainer" type="GridContainer" parent="ui/inventory"]
margin_left = 163.0
margin_top = 63.0
margin_right = 1489.0
margin_bottom = 579.0
rect_scale = Vector2( 0.25, 0.25 )
columns = 5

[node name="slot2" type="Button" parent="ui/inventory/GridContainer"]
margin_right = 250.0
margin_bottom = 250.0
rect_min_size = Vector2( 250, 250 )
theme = SubResource( 12 )

[node name="selection" type="Sprite" parent="ui/inventory/GridContainer/slot2"]
texture = ExtResource( 9 )
centered = false

[node name="slot1" type="Button" parent="ui/inventory/GridContainer"]
margin_left = 254.0
margin_right = 504.0
margin_bottom = 250.0
rect_min_size = Vector2( 250, 250 )
theme = SubResource( 12 )

[node name="slot3" type="Button" parent="ui/inventory/GridContainer"]
margin_left = 508.0
margin_right = 758.0
margin_bottom = 250.0
rect_min_size = Vector2( 250, 250 )
theme = SubResource( 12 )

[node name="slot4" type="Button" parent="ui/inventory/GridContainer"]
margin_left = 762.0
margin_right = 1012.0
margin_bottom = 250.0
rect_min_size = Vector2( 250, 250 )
theme = SubResource( 12 )

[node name="slot5" type="Button" parent="ui/inventory/GridContainer"]
margin_left = 1016.0
margin_right = 1266.0
margin_bottom = 250.0
rect_min_size = Vector2( 250, 250 )
theme = SubResource( 12 )

[node name="slot6" type="Button" parent="ui/inventory/GridContainer"]
margin_top = 254.0
margin_right = 250.0
margin_bottom = 504.0
rect_min_size = Vector2( 250, 250 )
theme = SubResource( 12 )

[node name="slot7" type="Button" parent="ui/inventory/GridContainer"]
margin_left = 254.0
margin_top = 254.0
margin_right = 504.0
margin_bottom = 504.0
rect_min_size = Vector2( 250, 250 )
theme = SubResource( 12 )

[node name="slot8" type="Button" parent="ui/inventory/GridContainer"]
margin_left = 508.0
margin_top = 254.0
margin_right = 758.0
margin_bottom = 504.0
rect_min_size = Vector2( 250, 250 )
theme = SubResource( 12 )

[node name="slot9" type="Button" parent="ui/inventory/GridContainer"]
margin_left = 762.0
margin_top = 254.0
margin_right = 1012.0
margin_bottom = 504.0
rect_min_size = Vector2( 250, 250 )
theme = SubResource( 12 )

[node name="x" type="Button" parent="ui/inventory"]
margin_left = 677.0
margin_top = 4.0
margin_right = 715.0
margin_bottom = 47.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 2 )
text = "X"

[node name="drop" type="Button" parent="ui/inventory"]
margin_left = 152.0
margin_top = 244.0
margin_right = 236.0
margin_bottom = 287.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 2 )
text = "Drop"

[connection signal="pressed" from="Main_menu/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Main_menu/Multiplayer" to="." method="_on_Multiplayer_pressed"]
[connection signal="pressed" from="Main_menu/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Multiplayer_window/Exitm" to="." method="_on_Exitm_pressed"]
[connection signal="pressed" from="Multiplayer_window/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="Multiplayer_window/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Multiplayer_window/generatename" to="." method="_on_generatename_pressed"]
[connection signal="pressed" from="ui/inventory/GridContainer/slot2" to="." method="_on_slot2_pressed"]
[connection signal="pressed" from="ui/inventory/GridContainer/slot1" to="." method="_on_slot1_pressed"]
[connection signal="pressed" from="ui/inventory/GridContainer/slot3" to="." method="_on_slot3_pressed"]
[connection signal="pressed" from="ui/inventory/GridContainer/slot4" to="." method="_on_slot4_pressed"]
[connection signal="pressed" from="ui/inventory/GridContainer/slot5" to="." method="_on_slot5_pressed"]
[connection signal="pressed" from="ui/inventory/GridContainer/slot6" to="." method="_on_slot6_pressed"]
[connection signal="pressed" from="ui/inventory/GridContainer/slot7" to="." method="_on_slot7_pressed"]
[connection signal="pressed" from="ui/inventory/GridContainer/slot8" to="." method="_on_slot8_pressed"]
[connection signal="pressed" from="ui/inventory/GridContainer/slot9" to="." method="_on_slot9_pressed"]
[connection signal="pressed" from="ui/inventory/x" to="." method="_on_x_pressed"]
[connection signal="pressed" from="ui/inventory/drop" to="." method="_on_drop_pressed"]
